<resources>
    <string name="app_name">Print</string>
    <string name="bold">Bold:</string>
    <string name="textsize">FontSize:</string>
    <string name="gravity">Gravity:</string>
    <string name="pages">Pages:</string>
    <string name="lable_height">Label Height:</string>
    <string name="graylevel">GrayLevel:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="print">Print</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="barcode">BarCode:</string>
    <string name="one_barcode">1d barcode:</string>
    <string name="two_barcode">2d barcode:</string>
    <string name="text">Text</string>
    <string name="step">FEED</string>
    <string name="next">NEXT PAGE</string>
    <string name="help">Help</string>
    <string name="web_print">Print Web</string>
    <string name="toggle">On/Off:</string>
    <string name="create">Update Setting</string>
    <string name="advance">advanced setting:</string>
    <string name="paper">Tagboard:</string>
    <string name="printer_opened">The Printer is opened</string>
    <string name="printer_closed">The Printer is closed</string>
    <string name="printer_opene_fail">Open the Printer fail</string>
    <string name="printer_close_fail">Close the Printer fail</string>
    <string name="notice_one">Notice: Only support to create 128 and EAN  the two kinds of 1d barcode</string>
    <string name="notice_two">Notice: Only support to create QR and PDF417  the two kinds of 2d barcode</string>
    <string name="modify_one_tips">1d barcode settings</string>
    <string name="modify_two_tips">2d barcode settings</string>
    <string name="modify_text_tips">Text setting</string>
    <string name="size_invalid_tips">the number can not beyond 50</string>
    <string name="zh_create_1d_tips">The contents which contains chinese can not generate  a one-dimensional code</string>
    <string name="scan_title">DIY Print</string>
    <string name="web_title">Web call Print</string>
    <string name="check_title">Printer check</string>
    <string name="web_path">file:///android_asset/print_en.html"</string>
</resources>
